--- a/basic_wallet_p/blockchain-wallet/src/App.css
+++ b/basic_wallet_p/blockchain-wallet/src/App.css
@@ -16,13 +16,14 @@
 .App-header {
   display: flex;
   flex-direction: row;
-  background-color: #282c34;
+  background-color: #031435;
   min-height: 100px;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
   box-shadow: 0px 2px 5px black;
+  text-shadow: 1px 2px 2px rgb(97,218,251);
 }
 
 .App-link {
